--- a/app/vmui/packages/vmui/src/pages/QueryPage/QueryPageBody/style.scss
+++ b/app/vmui/packages/vmui/src/pages/QueryPage/QueryPageBody/style.scss
@@ -12,20 +12,25 @@
     z-index: 3;
 
     @media (max-width:1000px) {
+      display: block;
       top: 51px;
     }
 
     &_mobile {
       margin: -$padding-global 0-$padding-global 0;
-      display: block;
       border-bottom: none;
     }
 
     &__settings {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
-      gap: $padding-small;
       justify-content: flex-end;
+
+      &_mobile {
+        display: inline-flex;
+        justify-content: flex-start;
+      }
     }
 
     &__log-info {
@@ -34,6 +39,7 @@
       padding-right: $padding-large;
       color: $color-text-secondary;
       font-size: $font-size-small;
+      white-space: nowrap;
     }
 
     &__tabs {
