app/vmui: add hotkeys to toggle series on hits chart (#863)

--- a/app/vmui/packages/vmui/src/components/Main/ShortcutKeys/style.scss
+++ b/app/vmui/packages/vmui/src/components/Main/ShortcutKeys/style.scss
@@ -54,6 +54,7 @@
             background-repeat: repeat-x;
             border: $border-divider;
             border-radius: 4px;
+            text-transform: capitalize;
           }
 
           svg {
