--- a/app/vmui/packages/vmui/src/components/Chart/BarHitsChart/LegendHitsMenu/style.scss
+++ b/app/vmui/packages/vmui/src/components/Chart/BarHitsChart/LegendHitsMenu/style.scss
@@ -34,6 +34,7 @@
     &_info {
       font-size: $font-size-small;
       font-weight: 500;
+      font-style: italic;
     }
   }
 
@@ -77,6 +78,12 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+
+    &__shortcut {
+      font-size: $font-size-small;
+      color: $color-text-secondary;
+      white-space:  nowrap;
     }
   }
 
