--- a/app/vmui/packages/vmui/src/components/Views/GroupView/style.scss
+++ b/app/vmui/packages/vmui/src/components/Views/GroupView/style.scss
@@ -25,6 +25,10 @@ $actions-width: calc(($actions-buttons*30px) + 10px);
         padding: $padding-small;
       }
     }
+
+    .vm-bar-hits-stats {
+      margin-right: $padding-small;
+    }
   }
 
   &-section {
